--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -67,3 +67,20 @@ button {
 #quizButton:active {
     background-color: #1e461e;
 }
+
+.quiz-options-container {
+    bottom: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    float: right;
+  }
+  
+  .quiz-options-select {
+    margin: 10px;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+  }
