--- a/app/CSS/Main.css
+++ b/app/CSS/Main.css
@@ -54,9 +54,10 @@ button {
     color: white;
     border: none;
     border-radius: 5px;
-    cursor: pointer;
+    cursor:grab;
     margin: 10px auto;
     transition: background-color 0.3s ease-in-out;
+    width: 350px;
 
 }
 
@@ -76,11 +77,29 @@ button {
     align-items: center;
     width: 100%;
     float: right;
-  }
-  
-  .quiz-options-select {
+}
+
+.quiz-options-select {
     margin: 10px;
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
-  }
+    min-width: 50px;
+    max-width: 50px;
+}
+
+#countdown {
+    font-family: 'Roboto Mono', monospace;
+    display: block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin: 30px auto;
+    width: 250px;
+    min-width: 250px;
+    max-width: 250px;
+}
