--- a/app/CSS/Main.css
+++ b/app/CSS/Main.css
@@ -43,7 +43,7 @@ button {
     margin-left: 15%;
 }
 
-#quizButton {
+.quizButton {
     font-family: 'Roboto Mono', monospace;
     display: block;
     padding: 10px 20px;
@@ -60,11 +60,11 @@ button {
 
 }
 
-#quizButton:hover {
+.quizButton:hover {
     background-color: #3e8e41;
 }
 
-#quizButton:active {
+.quizButton:active {
     background-color: #1e461e;
 }
 
